# chrome-update-digest

./: .gitignore  CLAUDE.md  LEGACY_SAMPLING_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  chrome-140-digest.md  digest_sampling_suggestions.md  fast_mcp_server.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.monitoring/: versions.json  webplatform-progress.json  webplatform-telemetry.jsonl
config/: focus_areas.yaml  output_configuration.md  urls.json
digest_markdown/: _config.yml  index-zh.md  index.md
docs/: github-pages-navigation.md  webgpu_strict_classification.md
project_docs/: 0921_page_generation_opt_plan.md  0929-todo.md  claude-skill-migration-plan.md  digest_markdown_review.md  learnings.md  new-prompt-sample.md  tests_review.md
scripts/: check_upstream.py
src/: convert_md2html.py  crawl_script.py  generate_github_pages_structure.py  merge_webgpu_release_notes_v2.py  process_enterprise_release_note.py
templates/: digest.html  digest_combined.html
tests/: TESTING.md  conftest.py  integration_test.py  run_tests.py  test_actual_split.py  test_area_webgpu_strict.py  test_auto_regeneration_integration.py  test_bilingual_support.py  test_chrome_137_generation.py  test_clean_data_pipeline_tool.py  test_convert.py  test_direct_tools.py  test_enhanced_pipeline.py  test_enhanced_resources.py  test_enhanced_webplatform_fixes.py  test_fastmcp_basic.py  test_fastmcp_error_handling.py  test_fastmcp_html.py  test_fastmcp_pipeline.py  test_fastmcp_resources_client.py  test_fault_tolerance.py  test_format_compliance.py  (+12 more)
(+1590 files in other folders)
